--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*cabeçalho*/
+
 header{
     display: flex;
     align-items: center;
@@ -5,8 +7,8 @@ header{
     background-color: #00AD0D; 
     color: white;             
     margin: 0px;
+    padding: 0 20px;
     font-family: Arial, sans-serif;
-    
 }
 
 header figure {
@@ -16,7 +18,9 @@ header figure {
 }
 
 header h1 {
-    margin: 0 10 0 0px;
+    font-size: 130%;
+    font-weight: bold;
+    margin: 0;
 }
 
 .programa{
@@ -25,19 +29,26 @@ header h1 {
 }
 
 nav a{
+    display: flex;
     color: white;
+    align-items: center;
     text-decoration: none;
+    gap: 8px;
 }
 
-nav h1 {
-    margin: 0;
-    font-size: 20px;
-}
 
+/*corpo*/
 
 body{
     font-family:Arial, Helvetica, sans-serif;
     background-color: rgb(247, 247, 247);
+}
+
+h2{
+    color:#950009; /*ou F80038*/
+    text-align: center;
+    background-color: #FFFFFF;
+    margin-top: 0px;
 }
 
 .forms{
@@ -49,54 +60,6 @@ body{
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
-.forms > label{
-    margin-top: 10px;
-}
-
-ul{
-    padding: 0px;
-    margin: 0px;
-    margin-left: 10px;
-}
-
-h2{
-    color:#950009; /*ou F80038*/
-    text-align: center;
-    background-color: #FFFFFF;
-    margin-top: 0px;
-}
-
-#sobresenha{
-    font-family:'Times New Roman', Times, serif;
-    font-size: 75%;
-}
-
-label{
-    font-weight: bold;
-}
-
-footer{
-    background-color: #00AD0D; 
-    color: white;             
-    text-align: center;
-    padding: 5px;
-    margin: 0px;
-    font-size: 80%;
-}
-
-footer > p{
-    margin: 5px;
-}
-
-
-
-/*950009
-F80038
-FF309E*/
-
-
-/*formulário, tem que organizar com as outras partes de formulário*/
-/* Espaçamento e layout padrão entre os campos */
 .forms label {
     display: block;
     margin-top: 20px;
@@ -114,26 +77,21 @@ FF309E*/
     font-size: 16px;
 }
 
-/* Lista de requisitos da senha */
 #sobresenha ul {
     margin-top: 10px;
-    margin-bottom: 20px;
     padding-left: 20px;
-    font-size: 14px;
+    font-size: 75%;
     color: #555;
-}
-
-#sobresenha li {
-    margin-bottom: 5px;
 }
 
 /* Botão de envio */
 .forms input[type="submit"] {
     width: 100%;
     padding: 12px;
-    margin-top: 20px;
-    background-color: #00AD0D;
+    margin-top: 30px;
+    background-color: #950009;
     color: white;
+    font-weight: bold;
     border: none;
     border-radius: 6px;
     font-size: 16px;
@@ -142,5 +100,58 @@ FF309E*/
 }
 
 .forms input[type="submit"]:hover {
-    background-color: #008c0a;
+    background-color: #5f0108;
 }
+
+/*rodapé*/
+
+footer {
+    background-color: #00AD0D;
+    color: white;
+    text-align: center;
+    padding: 5px;
+    margin: 0;
+    font-size: 80%;
+}
+
+footer > p {
+    margin: 5px;
+}
+
+.nomes-grid, .autoria-grid{
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 5px;
+}
+
+.nome-esquerda, .titulo{
+    text-align: right;
+}
+
+.divisor {
+    text-align: center;
+    min-width: 10px;
+}
+
+.nome-direita, .cidade{
+    text-align: left;
+}
+
+a{
+    color: white; 
+    text-decoration: none;   
+}
+
+a:hover{
+    color:  #5f0108;
+}
+
+
+/*950009
+F80038
+FF309E*/
+
+
