--- a/style.css
+++ b/style.css
@@ -29,11 +29,25 @@ nav a:hover {
     text-decoration: underline;
 }
 
-.hero {
+.titulo {
     text-align: center;
     padding: 60px 20px;
     background-color: #d2f1c3;
     color: #1c4c25;
+}
+
+.section {
+    max-width: 1000px;
+    margin: auto;
+    padding: 40px 20px;
+}
+
+.section h2 {
+    color: #00AD0D;
+}
+
+.section h3 {
+    color: #00AD0D;
 }
 
 .timeline {
@@ -54,36 +68,56 @@ nav a:hover {
     font-weight: bold;
 }
 
-
-.section {
-    max-width: 1000px;
-    margin: auto;
-    padding: 40px 20px;
+.grid-terreno {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+    align-items: center;
+    margin-top: 20px;
 }
 
-.section h2 {
-    color: #00AD0D;
+.texto-terreno {
+    padding-right: 10px;
 }
 
-.section h3 {
-    color: #00AD0D;
+.img-terreno img {
+    max-width: 100%;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+/* Responsivo para telas menores */
+@media (max-width: 768px) {
+    .grid-terreno {
+        grid-template-columns: 1fr;
+    }
+}
+
+.grid-impacto {
+    display: grid;
+    grid-template-columns: 1fr 200px;
+    gap: 30px;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.img-impacto img {
+    max-width: 100%;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+@media (max-width: 768px) {
+    .grid-impacto {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
 }
 
 #ods ul {
     list-style-type: disc;
     padding-left: 20px;
     margin-left: 0;
-}
-
-.img-container {
-    margin-top: 20px;
-}
-
-.img-container img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 12px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
 footer {
