--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ nav a{
 body{
     font-family:Arial, Helvetica, sans-serif;
     background-color: rgb(247, 247, 247);
+    margin: 0;
 }
 
 h2{
@@ -112,6 +113,9 @@ footer {
     padding: 5px;
     margin: 0;
     font-size: 80%;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 footer > p {
@@ -153,5 +157,3 @@ a:hover{
 /*950009
 F80038
 FF309E*/
-
-
