--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body{
 }
 
 h2{
-    color:#950009; /*ou F80038*/
+    color:#00AD0D; 
     text-align: center;
     background-color: #FFFFFF;
     margin-top: 0px;
@@ -90,7 +90,7 @@ h2{
     width: 100%;
     padding: 12px;
     margin-top: 30px;
-    background-color: #950009;
+    background-color: #00AD0D;
     color: white;
     font-weight: bold;
     border: none;
@@ -101,7 +101,7 @@ h2{
 }
 
 .forms input[type="submit"]:hover {
-    background-color: #5f0108;
+    background-color: #1c4c25;
 }
 
 /*rodapé*/
