--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
-body {
-    margin: 0;
-    font-family: 'Poppins', Arial, sans-serif;
-    background-color: rgb(247, 247, 247);
-    color: #2d2d2d;
-}
-
+/*cabeçalho
 header {
     background-color: #00AD0D;
     padding: 10px 20px;
@@ -12,6 +6,17 @@ header {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+}*/
+
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #00AD0D; 
+    color: white;             
+    margin: 0px;
+    padding: 0 20px;
+    font-family: Arial, sans-serif;
 }
 
 .logo img {
@@ -29,6 +34,23 @@ nav a:hover {
     text-decoration: underline;
 }
 
+.grid-menu {
+    display: grid;
+    grid-template-columns: 1fr auto; 
+    align-items: center;           
+    padding: 0 20px;
+}
+
+
+.texto-menu {
+    padding-right: 0%;
+}
+
+.icons-menu {
+    padding-left: 0%;
+}
+
+/*corpo título*/
 .titulo {
     text-align: center;
     padding: 60px 20px;
@@ -40,6 +62,14 @@ nav a:hover {
     max-width: 1000px;
     margin: auto;
     padding: 40px 20px;
+}
+
+/*corpo*/
+body {
+    margin: 0;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    background-color: rgb(247, 247, 247);
+    color: #2d2d2d;
 }
 
 .section h2 {
@@ -114,6 +144,17 @@ nav a:hover {
     }
 }
 
+.ods a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.ods a:hover {
+  color: #5f0108;
+  text-decoration: underline;
+}
+
+
 #ods ul {
     list-style-type: disc;
     padding-left: 20px;
@@ -124,32 +165,42 @@ nav a:hover {
     text-align: center;
 }
 
+/*rodapé*/
 footer {
-  background-color: #00AD0D;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  font-size: 80%;
+    background-color: #00AD0D;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    font-size: 80%;
 }
 
-.linha {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  flex-wrap: wrap;
-  margin: 5px 0;
+.nomes-grid, .autoria-grid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+    margin: 5px 0;
+}
+
+.esquerda, .copy{
+    text-align: right;
 }
 
 .divisor {
-  min-width: 10px;
+    align-items: center;
+    min-width: 10px;
+}
+
+.direita, .cidade{
+    text-align: left;
 }
 
 footer a {
-  color: white;
-  text-decoration: none;
+    color: white;
+    text-decoration: none;
 }
 
 footer a:hover {
-  color: #5f0108;
+    color: #5f0108;
 }
