--- a/style.css
+++ b/style.css
@@ -1,12 +1,4 @@
-/*cabeçalho
-header {
-    background-color: #00AD0D;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}*/
+/*cabeçalho*/
 
 header{
     display: flex;
