--- a/style.css
+++ b/style.css
@@ -112,9 +112,12 @@ footer {
     padding: 5px;
     margin: 0;
     font-size: 80%;
-    position: fixed;
     bottom: 0;
     width: 100%;
+}
+
+.rodape-login{
+    position: fixed;
 }
 
 footer > p {
