--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 /*cabeçalho*/
-
 header{
     display: flex;
     align-items: center;
@@ -36,15 +35,58 @@ header h1 {
     gap: 8px;
 }
 
-
-/*corpo*/
-
-body{
-    font-family:Arial, Helvetica, sans-serif;
-    background-color: rgb(247, 247, 247);
-    margin: 0;
+/*página principal*/
+.menu {
+    color: white;
+    text-decoration: none;
+    margin-left: 20px;
+    font-weight: bold;
 }
 
+.menu:hover {
+    text-decoration: underline;
+}
+
+.grid-menu {
+    display: grid;
+    grid-template-columns: 1fr auto; 
+    align-items: center;           
+    padding: 0 20px;
+}
+
+
+.texto-menu {
+    padding-right: 0%;
+}
+
+.icons-menu {
+    padding-left: 0%;
+}
+
+/*corpo título*/
+.titulo-principal {
+    text-align: center;
+    padding: 60px 20px;
+    background-color: #abec8b;
+    color: #1f5228;
+}
+
+.section {
+    max-width: 1000px;
+    margin: auto;
+    padding: 40px 20px;
+}
+
+
+/*corpo*/
+body {
+    margin: 0;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    background-color: rgb(247, 247, 247);
+    color: #2d2d2d;
+}
+
+/*cadastro e login*/
 .titulo-forms{
     color:#950009; 
     text-align: center;
@@ -104,130 +146,12 @@ body{
     background-color: #1c4c25;
 }
 
-/*rodapé*/
-footer {
-    background-color: #00AD0D;
-    color: white;
-    text-align: center;
-    padding: 5px;
-    margin: 0;
-    font-size: 80%;
-    bottom: 0;
-    width: 100%;
-}
-
-.rodape-login{
-    position: fixed;
-}
-
-footer > p {
-    margin: 5px;
-}
-
-.nomes-grid, .autoria-grid{
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin: 5px;
-}
-
-.nome-esquerda, .titulo{
-    text-align: right;
-}
-
-.divisor {
-    text-align: center;
-    min-width: 10px;
-}
-
-.nome-direita, .cidade{
-    text-align: left;
-}
-
-a{
-    color: white; 
-    text-decoration: none;   
-}
-
-a:hover{
-    color:  #5f0108;
-}
-
-
 /*página principal*/
-/*cabeçalho*/
-
-header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #00AD0D; 
-    color: white;             
-    margin: 0px;
-    padding: 0 20px;
-    font-family: Arial, sans-serif;
-}
-
-.logo img {
-    height: 70px;
-}
-
-.menu {
-    color: white;
-    text-decoration: none;
-    margin-left: 20px;
-    font-weight: bold;
-}
-
-.menu:hover {
-    text-decoration: underline;
-}
-
-.grid-menu {
-    display: grid;
-    grid-template-columns: 1fr auto; 
-    align-items: center;           
-    padding: 0 20px;
-}
-
-
-.texto-menu {
-    padding-right: 0%;
-}
-
-.icons-menu {
-    padding-left: 0%;
-}
-
-/*corpo título*/
-.titulo-principal {
-    text-align: center;
-    padding: 60px 20px;
-    background-color: #abec8b;
-    color: #1f5228;
-}
-
-.section {
-    max-width: 1000px;
-    margin: auto;
-    padding: 40px 20px;
-}
-
-/*corpo*/
-body {
-    margin: 0;
-    font-family: 'Poppins', Arial, Helvetica, sans-serif;
-    background-color: rgb(247, 247, 247);
-    color: #2d2d2d;
-}
-
 .titulo-h2 {
     color: #00AD0D;
 }
 
-.section h3 {
+h3 {
     color: #00AD0D;
 }
 
@@ -314,4 +238,56 @@ body {
 
 .img-ods {
     text-align: center;
+}
+
+
+/*rodapé*/
+footer {
+    background-color: #00AD0D;
+    color: white;
+    text-align: center;
+    padding: 5px;
+    margin: 0;
+    font-size: 80%;
+    bottom: 0;
+    width: 100%;
+}
+
+.rodape-login{
+    position: fixed;
+}
+
+footer > p {
+    margin: 5px;
+}
+
+.nomes-grid, .autoria-grid{
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 5px;
+}
+
+.nome-esquerda, .titulo{
+    text-align: right;
+}
+
+.divisor {
+    text-align: center;
+    min-width: 10px;
+}
+
+.nome-direita, .cidade{
+    text-align: left;
+}
+
+a{
+    color: white; 
+    text-decoration: none;   
+}
+
+a:hover{
+    color:  #5f0108;
 }
