--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,32 @@ a:hover{
     border-radius: 6px;
 }
 
+.campo-pesquisa-wrapper {
+    position: relative;
+    display: inline-block;
+    width: 60%;
+}
+
+#campo-pesquisa {
+    width: 100%;
+    padding: 10px 40px 10px 10px; 
+    font-size: 16px;
+    font-family: inherit;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    box-sizing: border-box;
+}
+
+.search-icon {
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #950009;
+    cursor: pointer;
+    font-size: 20px;
+}
+
 /* Tabela */
 #tabela-usuarios {
     width: 100%;
@@ -396,18 +422,7 @@ a:hover{
     text-align: center;
 }
 
-/*.tabela-section td.excluir {
-    color: #950009;
-    font-weight: bold;
-    font-size: 18px;
-    cursor: pointer;
-    transition: color 0.3s;
-}
-
-.tabela-section td.excluir:hover {
-    color: #5f0108;
-}*/
-
+/*Botão de excluir*/
 #botaoExcluirTodos {
     background-color: #950009;
     color: white;
@@ -442,6 +457,7 @@ a:hover{
     color: white;
 }
 
+/*popup de verificação para exclusão da lista toda*/
 .popup-oculto {
     display: none;
     position: fixed;
